# Spegetti

./: .gitignore  CMakeLists.txt  README.md
Spegetti/: Spegetti.h
Spegetti/Sources/: Console.cpp
Spegetti_Demo/: Spegetti API.h  Spegetti.h
Spegetti_Demo/Headers/: Spegetti_Demo.h
Spegetti_Demo/Sources/: main.cpp
